@@ -7,13 +7,14 @@ import com.gostavdev.commercify.orderservice.dto.mappers.OrderDTOMapper;
 import com.gostavdev.commercify.orderservice.dto.mappers.OrderLineDTOMapper;
 import com.gostavdev.commercify.orderservice.feignclients.PaymentsClient;
 import com.gostavdev.commercify.orderservice.feignclients.ProductsClient;
-import com.gostavdev.commercify.orderservice.feignclients.UserClient;
 import com.gostavdev.commercify.orderservice.model.Order;
 import com.gostavdev.commercify.orderservice.model.OrderLine;
 import com.gostavdev.commercify.orderservice.model.OrderStatus;
 import com.gostavdev.commercify.orderservice.repositories.OrderLineRepository;
 import com.gostavdev.commercify.orderservice.repositories.OrderRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -30,7 +31,6 @@ public class OrderService {
 
     private final ProductsClient productsClient;
     private final PaymentsClient paymentsClient;
-    private final UserClient userClient;
 
     @Transactional
     public List<OrderDTO> getOrdersByUserId(Long userId) {
@@ -88,8 +88,7 @@ public class OrderService {
 
     @Transactional
     public List<OrderDTO> getAllOrders() {
-        List<Order> orders = orderRepository.findAll();
-        return orders.stream().map(mapper).collect(Collectors.toList());
+        return orderRepository.findAll().stream().map(mapper).toList();
     }
 
     @Transactional
@@ -109,5 +108,20 @@ public class OrderService {
         List<OrderLineDTO> orderLines = getOrderLinesByOrderId(order);
 
         return new OrderDetails(mapper.apply(order), orderLines);
+    }
+
+    @Transactional(readOnly = true)
+    public boolean isOrderOwnedByUser(Long orderId, Long userId) {
+        System.out.println("orderId: " + orderId);
+        System.out.println("userId: " + userId);
+
+        return orderRepository.findById(orderId)
+                .map(order -> order.getUserId().equals(userId))
+                .orElse(false);
+    }
+
+    private String getCurrentUserEmail() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        return authentication.getName();
     }
 }
